fix: update export of jvm